--- a/service-runner/src/main/resources/profiles/sep24-actions/test.env
+++ b/service-runner/src/main/resources/profiles/sep24-actions/test.env
@@ -9,5 +9,5 @@ run_docker=true
 run_all_servers=true
 
 # Enable the test flows in the kotlin reference server
-sep24.enableTest=true
+enableTest=true
 sep24.interactiveJwtKey=secret_sep24_interactive_url_jwt_secret
