--- a/service-runner/src/main/resources/profiles/sep24/test.env
+++ b/service-runner/src/main/resources/profiles/sep24/test.env
@@ -9,6 +9,6 @@ run_docker=true
 run_all_servers=true
 
 # Enable the test flows in the kotlin reference server
-sep24.enableTest=true
-sep24.rpcActionsEnabled=false
+enableTest=true
+rpcActionsEnabled=false
 sep24.interactiveJwtKey=secret_sep24_interactive_url_jwt_secret
