--- a/service-runner/src/main/resources/profiles/sep24-custody-rpc/config.env
+++ b/service-runner/src/main/resources/profiles/sep24-custody-rpc/config.env
@@ -12,8 +12,8 @@ secret.custody_server.auth_secret=secret_custody_server_auth_secret
 app_logging.stellar_level=DEBUG
 # events
 events.enabled=true
-events.publisher.type=kafka
-events.publisher.kafka.bootstrap_server=kafka:29092
+events.queue.type=kafka
+events.queue.kafka.bootstrap_server=kafka:29092
 # callback API endpoint
 callback_api.base_url=http://reference-server:8091/
 # platform API endpoint
