--- a/service-runner/src/main/resources/profiles/sep24-rpc/config.env
+++ b/service-runner/src/main/resources/profiles/sep24-rpc/config.env
@@ -13,8 +13,8 @@ app_logging.stellar_level=DEBUG
 app_logging.request_logger_enabled=true
 # events
 events.enabled=true
-events.queue.type=kafka
-events.queue.kafka.bootstrap_server=kafka:29092
+events.publisher.type=kafka
+events.publisher.kafka.bootstrap_server=kafka:29092
 # callback API endpoint
 callback_api.base_url=http://reference-server:8091/
 # platform API endpoint
