Add End2End tests for SEP-31

--- a/service-runner/src/main/resources/profiles/default-custody-rpc/test.env
+++ b/service-runner/src/main/resources/profiles/default-custody-rpc/test.env
@@ -10,7 +10,7 @@ run_docker=true
 run_all_servers=true
 
 # Enable the test flows in the kotlin reference server
-sep24.enableTest=true
-sep24.interactiveJwtKey=secret_sep24_interactive_url_jwt_secret
+app.enableTest=true
 app.custodyEnabled=true
 app.rpcEnabled=true
+sep24.interactiveJwtKey=secret_sep24_interactive_url_jwt_secret
