--- a/service-runner/src/main/resources/profiles/default-custody-rpc/config.env
+++ b/service-runner/src/main/resources/profiles/default-custody-rpc/config.env
@@ -16,15 +16,15 @@ app_logging.request_logger_enabled=true
 # events
 events.enabled=true
 events.queue.type=kafka
-events.queue.kafka.bootstrap_server=kafka:29092
+events.queue.kafka.bootstrap_server=localhost:29092
 # callback API endpoint
-callback_api.base_url=http://reference-server:8091/
+callback_api.base_url=http://localhost:8091/
 # platform API endpoint
-platform_api.base_url=http://platform:8085/
-custody_server.base_url=http://custody-server:8086
+platform_api.base_url=http://localhost:8085/
+custody_server.base_url=http://localhost:8086
 # data
 data.type=postgres
-data.server=db:5432
+data.server=localhost:5432
 data.database=postgres
 data.flyway_enabled=true
 # assets
@@ -52,9 +52,9 @@ custody.fireblocks.reconciliation.cron_expression=0/10 * * * * *
 # clients
 clients[0].name=reference
 clients[0].type=noncustodial
-clients[0].domain=wallet-server:8092
-clients[0].callback_url=http://wallet-server:8092/callbacks
+clients[0].domain=localhost:8092
+clients[0].callback_url=http://localhost:8092/callbacks
 clients[1].name=referenceCustodial
 clients[1].type=custodial
 clients[1].signing_key=GDJLBYYKMCXNVVNABOE66NYXQGIA5AC5D223Z2KF6ZEYK4UBCA7FKLTG
-clients[1].callback_url=http://wallet-server:8092/callbacks
+clients[1].callback_url=http://localhost:8092/callbacks
