--- a/service-runner/src/main/resources/profiles/default-rpc/config.env
+++ b/service-runner/src/main/resources/profiles/default-rpc/config.env
@@ -22,7 +22,7 @@ platform_api.base_url=http://platform:8085/
 custody_server.base_url=http://custody-server:8086
 # data
 data.type=postgres
-data.server=localhost:5432
+data.server=db:5432
 data.database=postgres
 data.flyway_enabled=true
 # assets
