--- a/service-runner/src/main/resources/profiles/default-custody-rpc/test.env
+++ b/service-runner/src/main/resources/profiles/default-custody-rpc/test.env
@@ -13,4 +13,5 @@ run_all_servers=true
 app.enableTest=true
 app.custodyEnabled=true
 app.rpcEnabled=true
+wallet.hostname=wallet-server:8092
 sep24.interactiveJwtKey=secret_sep24_interactive_url_jwt_secret
