--- a/kotlin-reference-server/src/main/resources/default-config.yaml
+++ b/kotlin-reference-server/src/main/resources/default-config.yaml
@@ -17,7 +17,7 @@ app:
   # Indicates, that custody integration is enabled
   custodyEnabled: false
   # Indicates, that RPC requests should be used instead of PATCH /transactions endpoint
-  rpcEnabled: true
+  rpcEnabled: false
 
 
 # These are secrets shared between Anchor and Platform that are used to safely communicate from `Platform->Anchor`
